--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html">Accueil</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="./index.html" title="Accueil">Accueil</a></li>
+                <li><a href="" title="Contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -23,7 +23,9 @@
             <h1>Mes Projets</h1>
 
             <section>
-                <img src="https://placehold.co/400x700" alt="">
+                <div class="img-section">
+                    <img src="https://placehold.co/400x700" alt="Proje1">
+                </div>
                 <div class="texte">
                     <h2>Adipisicing sint officia officia ullamco aute Lorem exercitation nisi nisi duis fugiat.</h2>
                     <p>Aliquip fugiat nostrud non Lorem dolor aute et commodo exercitation quis veniam dolor. Cupidatat ea elit nostrud
@@ -55,8 +57,9 @@
             </section>
 
             <section>
-
-                <img src="https://placehold.co/400x700" alt="">
+                <div class="img-section">
+                    <img src="https://placehold.co/400x700" alt="Proje2">
+                </div>
                 <div class="texte">
                     <h2>Aute ex aliqua Lorem magna proident consequat nulla ad consequat labore exercitation.</h2>
                     <p>Consequat aliquip incididunt mollit incididunt Lorem. Nostrud qui sit voluptate eiusmod culpa do elit. Mollit
@@ -95,8 +98,9 @@
             </section>
 
             <section>
-
-                <img src="https://placehold.co/400x700" alt="">
+                <div class="img-section">
+                    <img src="https://placehold.co/400x700" alt="Proje3">
+                </div>
                 <div class="texte">
                     <h2>Eu incididunt dolor proident occaecat nulla ut laborum occaecat non sint.</h2>
                     <p>Eiusmod sit id pariatur voluptate labore deserunt esse nulla. Aliqua dolore laboris officia id cupidatat do est est
@@ -125,8 +129,9 @@
             </section>
 
             <section>
-
-                <img src="https://placehold.co/400x700" alt="">
+                <div class="img-section">
+                    <img src="https://placehold.co/400x700" alt="Proje4">
+                </div>
                 <div class="texte">
                     <h2>Sit sunt sit consequat id culpa ullamco.</h2>
                     <p>Ipsum aliquip ullamco ea id cupidatat dolore occaecat pariatur. Velit enim officia ullamco irure amet ut tempor Lorem
@@ -173,8 +178,9 @@
             </section>
 
             <section>
-
-                <img src="https://placehold.co/400x700" alt="">
+                <div class="img-section">
+                    <img src="https://placehold.co/400x700" alt="Proje5">
+                </div>
                 <div class="texte">
                     <h2>Excepteur labore duis et voluptate duis reprehenderit nisi reprehenderit magna do reprehenderit fugiat.</h2>
                     <p>Eiusmod sit id pariatur voluptate labore deserunt esse nulla. Aliqua dolore laboris officia id cupidatat do est est
