--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
@@ -126,6 +126,7 @@
                         ipsum.
                     </p>
                     <a href="" title="VoirPlus">Voir plus ...</a>
+                </div>
             </section>
 
             <section>
