--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <header>
+        <!-- Contact n'est pas encore fait -->
         <nav>
             <ul>
                 <li><a href="./index.html" title="Accueil">Accueil</a></li>
@@ -21,7 +22,7 @@
     <main>
         <article>
             <h1>Mes Projets</h1>
-
+            <!-- Les projets sont dans chaque section avec une image et une description -->
             <section>
                 <div class="img-section">
                     <img src="https://placehold.co/400x700" alt="Proje1">
@@ -214,6 +215,7 @@
     </main>
 
     <footer>
+        <!-- Adresse de la personne et le copyright -->
         <p>&copy; Tous droits réservés</p>
         <address>
             <p>Saber Pépin</p>
