Correction avec les balise section et article

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </header>
 
     <main>
-        <article>
+        <section>
             <h1>Mes Projets</h1>
             <!-- Les projets sont dans chaque section avec une image et une description -->
-            <section>
-                <div class="img-section">
+            <article>
+                <div class="img-article">
                     <img src="https://placehold.co/400x700" alt="Proje1">
                 </div>
                 <div class="texte">
@@ -55,10 +55,10 @@
                         aute sint cillum duis Lorem.</p>
                     <a href="" title="VoirPlus">Voir plus ...</a>
                 </div>
-            </section>
+            </article>
 
-            <section>
-                <div class="img-section">
+            <article>
+                <div class="img-article">
                     <img src="https://placehold.co/400x700" alt="Proje2">
                 </div>
                 <div class="texte">
@@ -96,10 +96,10 @@
                         exercitation sunt ipsum dolor. Anim deserunt ipsum exercitation pariatur et aliqua laboris eu magna.</p>
                     <a href="" title="VoirPlus">Voir plus ...</a>
                 </div>
-            </section>
+            </article>
 
-            <section>
-                <div class="img-section">
+            <article>
+                <div class="img-article">
                     <img src="https://placehold.co/400x700" alt="Proje3">
                 </div>
                 <div class="texte">
@@ -128,10 +128,10 @@
                     </p>
                     <a href="" title="VoirPlus">Voir plus ...</a>
                 </div>
-            </section>
+            </article>
 
-            <section>
-                <div class="img-section">
+            <article>
+                <div class="img-article">
                     <img src="https://placehold.co/400x700" alt="Proje4">
                 </div>
                 <div class="texte">
@@ -177,10 +177,10 @@
                     </p>
                     <a href="" title="VoirPlus">Voir plus ...</a>
                 </div>
-            </section>
+            </article>
 
-            <section>
-                <div class="img-section">
+            <article>
+                <div class="img-article">
                     <img src="https://placehold.co/400x700" alt="Proje5">
                 </div>
                 <div class="texte">
@@ -209,9 +209,9 @@
                     </p>
                     <a href="" title="VoirPlus">Voir plus ...</a>
                 </div>
-            </section>
+            </article>
 
-        </article>
+        </section>
     </main>
 
     <footer>
